--- a/EllypinCustomer/src/index.html
+++ b/EllypinCustomer/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>EllypinAngular</title>
+  <title>Ellypin</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,6 +16,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/smooth-scroll/14.2.1/smooth-scroll.min.js"></script>
     <script type="text/javascript" src="assets/js/common.js"></script>
+    
   <app-root></app-root>
 </body>
 </html>
